[project]
name = "griptape-nodes-library-template"
version = "0.1.0"
description = "Template for Users to create Custom Libraries and Nodes"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "griptape-nodes",
]
[tool.uv.sources]
griptape-nodes = { path = "../griptape-nodes" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"