[project]
name = "kyro-nodes-dev"
version = "0.1.0"
description = "KYRO DEV NODES"
authors = [
    {name = "Your Name",email = "kyro@griptape.ai"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
